# Picocalc-Coyote-OS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h  gif_utils.c  gif_utils.h  gifenc.c  gifenc.h  keyboard_definition.h  main.c  text_mode.c  text_mode.h  utils.c  utils.h
UI/: ui.c  ui.h
i2ckbd/: i2ckbd.c  i2ckbd.h
lcdspi/: lcdspi.c  lcdspi.h
lcdspi/fonts/: battery.h
pwm_sound/: pwm_sound.c  pwm_sound.h
